	Antoine Levy-Lambert
	Andrey Lomakin
	William Lyvers
	Sakari Maaranen
	Jan Materne
	Markus M. May
	Abel Muino
	J. Lewis Muir
	Stephen Nesbitt
	Joshua Nichols
	Bernard Niset
	David Maplesden
	Glen Marchesani
	Phil Messenger
	Steve Miller
	Mathias Muller
	Randy Nott
	Peter Oxenham
	Jesper Pedersen
	Emmanuel Pellereau
	Roshan Punnoose
	Jean-Baptiste Quenot
	Carl Quinn
	Damon Rand
	Geoff Reedy
	Christian Riege
	Andreas Sahlbach
	Brian Sanders
	Adrian Sandor
	Michael Scheetz
	Ruslan Shevchenko
	John Shields
	Simon Steiner
	Johan Stuyts
	Jason Trump
	Tjeerd Verhagen
	Richard Vowles
	Sven Walter
	James P. White
	Tom Widmer
	John Williams
	Chris Wood
	Patrick Woodworth
	Jaroslaw Wypychowski
	Aleksey Zhukov
	
   trunk
=====================================
- DOCUMENTATION: Added missing documentation about the ivy:publish child elements.
- DOCUMENTATION: Grammar, spelling, and clarity of Settings File documentation (IVY-1216) (thanks to Steve Miller)
- DOCUMENTATION: Grammar, spelling, and clarity of Tutorial documentation (IVY-1222) (thanks to Steve Miller)

- NEW: Ivy can now generate OpenPGP compatible ASCII armored detached signatures when publishing artifacts.

- IMPROVEMENT: the <artifact> child of ivy:publish now accepts any attribute
- IMPROVEMENT: Handle attributes in description subelements (IVY-1214) (thanks to Jean-Louis Boudart)
- IMPROVEMENT: Use IvyAuthenticator only when it is really necessary (IVY-1211)
- IMPROVEMENT: MakePom task handling of mulitple artifacts for Maven2 (IVY-707) (thanks to Jesper Pedersen)
- IMPROVEMENT: ivy:makepom now has an option to disable the generation of an extra Ivy comment block in the POM
- IMPROVEMENT: ivy:makepom now accepts a list of configurations to include (IVY-1005) (thanks to Jesper Pedersen)
- IMPROVEMENT: ivy:makepom can generate a <description> element in the pom (IVY-1215) (thanks to Jesper Pedersen)

- FIX: OutOfMemoryError when uploading large files using commons-httpclient (IVY-1197)