@@ -61,6 +61,16 @@ begin_import
 import|import
 name|java
 operator|.
+name|io
+operator|.
+name|OutputStream
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|net
 operator|.
 name|URL
@@ -380,6 +390,22 @@ operator|.
 name|methods
 operator|.
 name|PutMethod
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|httpclient
+operator|.
+name|methods
+operator|.
+name|RequestEntity
 import|;
 end_import
 
@@ -867,34 +893,16 @@ name|useProxyAuthentication
 argument_list|()
 argument_list|)
 expr_stmt|;
-name|FileInputStream
-name|fileStream
-init|=
-literal|null
-decl_stmt|;
 try|try
 block|{
-name|fileStream
-operator|=
-operator|new
-name|FileInputStream
-argument_list|(
-name|src
-argument_list|)
-expr_stmt|;
 name|put
 operator|.
 name|setRequestEntity
 argument_list|(
 operator|new
-name|InputStreamRequestEntity
+name|FileRequestEntity
 argument_list|(
-name|fileStream
-argument_list|,
 name|src
-operator|.
-name|length
-argument_list|()
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -920,30 +928,6 @@ expr_stmt|;
 block|}
 finally|finally
 block|{
-if|if
-condition|(
-name|fileStream
-operator|!=
-literal|null
-condition|)
-block|{
-try|try
-block|{
-name|fileStream
-operator|.
-name|close
-argument_list|()
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|IOException
-name|e
-parameter_list|)
-block|{
-comment|/* ignored */
-block|}
-block|}
 name|put
 operator|.
 name|releaseConnection
@@ -2273,6 +2257,106 @@ argument_list|,
 name|domain
 argument_list|)
 return|;
+block|}
+specifier|private
+specifier|static
+class|class
+name|FileRequestEntity
+implements|implements
+name|RequestEntity
+block|{
+specifier|private
+name|File
+name|file
+decl_stmt|;
+specifier|public
+name|FileRequestEntity
+parameter_list|(
+name|File
+name|file
+parameter_list|)
+block|{
+name|this
+operator|.
+name|file
+operator|=
+name|file
+expr_stmt|;
+block|}
+specifier|public
+name|long
+name|getContentLength
+parameter_list|()
+block|{
+return|return
+name|file
+operator|.
+name|length
+argument_list|()
+return|;
+block|}
+specifier|public
+name|String
+name|getContentType
+parameter_list|()
+block|{
+return|return
+literal|null
+return|;
+block|}
+specifier|public
+name|boolean
+name|isRepeatable
+parameter_list|()
+block|{
+return|return
+literal|true
+return|;
+block|}
+specifier|public
+name|void
+name|writeRequest
+parameter_list|(
+name|OutputStream
+name|out
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|InputStream
+name|instream
+init|=
+operator|new
+name|FileInputStream
+argument_list|(
+name|file
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+name|FileUtil
+operator|.
+name|copy
+argument_list|(
+name|instream
+argument_list|,
+name|out
+argument_list|,
+literal|null
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|instream
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 block|}
 block|}
 end_class
