@@ -88,6 +88,7 @@ for detailed view of each issue, please consult http://issues.apache.org/jira/br
 	Carl Quinn
 	Damon Rand
 	Geoff Reedy
+	Torkild U. Resheim
 	Christian Riege
 	Andreas Sahlbach
 	Brian Sanders
@@ -125,7 +126,7 @@ for detailed view of each issue, please consult http://issues.apache.org/jira/br
 - IMPROVEMENT: ivy:makepom now accepts a list of configurations to include (IVY-1005) (thanks to Jesper Pedersen)
 - IMPROVEMENT: ivy:makepom can generate a <description> element in the pom (IVY-1215) (thanks to Jesper Pedersen)
 
-- FIX: OutOfMemoryError when uploading large files using commons-httpclient (IVY-1197)
+- FIX: OutOfMemoryError when uploading large files using commons-httpclient (IVY-1197) (thanks to Torkild U. Resheim)
 - FIX: artifactreport ant task doesn't honor log attribute (IVY-1212)
 - FIX: XmlModuleDescriptorWriter does not write the transitive attribute (IVY-1207) (thanks to Abel Muino)
 - FIX: Ivy info/extends/extendsType attribute is misspelled by XmlModuleDescriptorWriter (IVY-1203) (thanks to Jason Trump)
